sirhmf/back/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sirh-backend
  labels:
    app: sirh-backend
    type: backend
spec:
  selector:
    matchLabels:
      app: sirh-backend
      type: backend
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sirh-backend
        type: backend
    spec:
      nodeSelector:
        kubernetes.io/hostname: workernode1
      imagePullSecrets:
       - name: regcred
      containers:
        - name: sirh-backend
          image: 192.168.2.19:5000/backsirh:0.0.1-SNAPSHOT
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "2Gi"
              cpu: "2"
              #---------------------------------#
          ports:
            - name: api
              containerPort: 9099
              protocol: TCP
          imagePullPolicy: Always
